<resources   xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">金帝MES</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="set_alias">设置别名</string>
    <string name="unset_alias">撤销别名</string>
    <string name="set_account">设置帐号</string>
    <string name="unset_account">撤销帐号</string>
    <string name="subscribe_topic">订阅标签</string>
    <string name="unsubscribe_topic">撤销标签</string>
    <string name="set_accept_time">设置时间</string>
    <string name="pause_push">暂停推送</string>
    <string name="resume_push">恢复推送</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="register_success">Register push success.</string>
    <string name="register_fail">Register push fail.</string>
    <string name="recv_passthrough_message"> Receive a passthrough message. Content is \"%1$s\"</string>
    <string name="click_notification_message"> Clicked a notification message. Content is \"%1$s\"</string>
    <string name="arrive_notification_message"> Arrived a notification message. Content is \"%1$s\"</string>
    <string name="set_alias_success"> Set alias \"%1$s\" success.</string>
    <string name="set_alias_fail"> Set alias fail for %1$s.</string>
    <string name="unset_alias_success"> Unset alias \"%1$s\" success.</string>
    <string name="unset_alias_fail"> Unset alias fail for %1$s.</string>
    <string name="set_account_success"> Set account \"%1$s\" success.</string>
    <string name="set_account_fail"> Set account fail for %1$s.</string>
    <string name="unset_account_success"> Unset account \"%1$s\" success.</string>
    <string name="unset_account_fail"> Unset account fail for %1$s.</string>
    <string name="subscribe_topic_success"> Subscribe topic \"%1$s\" success.</string>
    <string name="subscribe_topic_fail"> Subscribe topic fail for %1$s.</string>
    <string name="unsubscribe_topic_success"> Unsubscribe topic \"%1$s\" success.</string>
    <string name="unsubscribe_topic_fail"> Unsubscribe topic fail for %1$s.</string>
    <string name="set_accept_time_success"> Set accept time %1$s - %2$s success.</string>
    <string name="set_accept_time_fail"> Set accept time fail for %1$s.</string>

    <!--成型后段扫码入库-begin-->
    <!-- 所对应的webservice 接口URL-->
    <string name="cxstockin_form_name">成型后段扫码入库</string>
    <string name="cxstockin_webservice_url">http://192.168.99.79:8012/ErpForWMSServer.asmx</string>
    <string name="cxstockin_stockin">入库单</string>
    <string name="cxstockin_scstockin">生产入库单</string>
    <string name="cxstockin_stockout">领料单</string>
    <string name="cxstockin_stocktemp">暂收单</string>
    <string name="cxstockin_barcode">外箱条形码</string>
    <string name="cxstockin_action_settings">Settings</string>
    <string name="cxstockin_menu_settings">Settings</string>
    <string name="cxstockin_back">返回</string>
    <string name="cxstockin_hotel_title">房间列表</string>
    <string name="cxstockin_the_user">用户信息</string>
    <string name="cxstockin_login_welcome_msg">欢迎登陆</string>
    <string name="cxstockin_login_username_msg">用户</string>
    <string name="cxstockin_login_password_msg">密码</string>
    <string name="cxstockin_login_remember_me_msg">记住密码</string>
    <string name="cxstockin_login_auto_login_msg">自动登陆</string>
    <string name="cxstockin_login_btn_login">登陆</string>
    <string name="cxstockin_login_btn_register">注册</string>
    <string name="cxstockin_welcome">welcome</string>
    <string name="cxstockin_password">密&#160;&#160;&#160; 码：</string>
    <string name="cxstockin_username">用户名：</string>
    <string name="cxstockin_phonenum">手机号：</string>
    <string name="cxstockin_title_activity_login">用户登录</string>
    <!--供应商扫码入库-begin-->
    <string name="supplystockin_form_name">供应商扫码入库</string>
    <!--供应商扫码入库-end-->
    <!-- 生产汇报信息-->
    <string name="screport_barcode">派工单条形码</string>
    <string name="screport_form_name">生产汇报扫码</string>
    <!-- 用户登录信息-->
    <string name="cxstockin_spinner_zzt">当前账套</string>
    <string name="cxstockin_spinner_org">组织名称</string>
    <string name="cxstockin_spinner_billtype">单据类型</string>
    <string name="cxstockin_prompt_username">ERP用户名</string>
    <string name="cxstockin_prompt_password">ERP密码</string>
    <string name="cxstockin_action_sign_in">登录</string>
    <string name="cxstockin_action_return">返回</string>
    <string name="cxstockin_action_sign_in_short">登录</string>
    <string name="cxstockin_error_invalid_password">密码太短</string>
    <string name="cxstockin_error_incorrect_password">密码错误</string>
    <string name="cxstockin_error_field_required">This field is required</string>
    <string name="cxstockin_permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!--app更新 服务器设置 -->
    <string name="updateapkurl">http://192.168.88.254:8020/AndroidUpdate/StockBarCode/StockBarCode.apk</string>
    <string name="updatexmlurl">http://192.168.88.254:8020/AndroidUpdate/StockBarCode/update.xml</string>
    <!--滑动删除提示窗体-->
    <string name="deleteformtitle">确定要删除记录?</string>
    <string name="deletebtnname">删除</string>
    <string name="cancelbtnname">取消</string>

    <string name="tip_type_not_image">选择的不是图片</string>
    <string name="tip_no_camera">没有相机</string>
    <string name="tip_tips">提示</string>
    <string name="tip_compress">正在压缩照片...</string>
    <string name="tip_compress_failed">"%1$s 图片压缩失败:%2$s picturePath:%3$s"</string>
    <string name="msg_crop_failed">"有裁切失败的图片"</string>
    <string name="msg_compress_failed">"有压缩失败的图片"</string>
    <string name="msg_crop_canceled">" 取消裁切"</string>
    <string name="msg_operation_canceled">"操作被取消"</string>
    <string name="tip_permission_camera">没有使用相机的权限，请在权限管理中开启</string>
    <string name="tip_permission_storage">没有使用SD卡的权限，请在权限管理中开启</string>
    <string name="tip_permission_camera_storage">没有使用相机和SD卡的权限，请在权限管理中开启</string>

    <!--custom multipleimageselect -->
    <string name="album_view">选择图片</string>
    <string name="image_view">单击选择</string>

    <string name="add">确定</string>
    <string name="selected">已选</string>
    <string name="limit_exceeded">最多能选 %d 张</string>



    <!--成型后段扫码入库-end-->
    <array name="bootstrap_dropdown">
        <item>No Data</item>
    </array>
    <array name="bootstrap_dropdown_example_data">
        <item>First item</item>
        <item>Second item</item>
        <item>{dropdown_disabled}Disabled item</item>
        <item>{dropdown_header}Dropdown header</item>
        <item>Fourth item</item>
        <item>Fifth item</item>
        <item>{dropdown_separator}</item>
        <item>Separated item</item>
        <item>Item 9</item>
        <item>Item 10</item>
        <item>Item 11</item>
        <item>Item 12</item>
        <item>Item 13</item>
        <item>Item 14</item>
        <item>Item 15</item>
        <item>Item 16</item>
        <item>Item 17</item>
        <item>Item 18</item>
        <item>Item 19</item>
        <item>Item 20</item>
    </array>

    <string name="dont_show_again">Don\'t show again</string>

    <string name="ex_msg_dialog_choice_confirm">Confirm button is only for multi choice lists. You must call setMultiChoiceItems first</string>
    <string name="ex_msg_dialog_view_not_set">You must call method setView before calling configureView.</string>

</resources>
