<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="right|center_vertical"
                android:singleLine="true"
                android:text="当前账套: "
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/SP_ZT"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:hint="@string/cxstockin_spinner_zzt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="right|center_vertical"
                android:singleLine="true"
                android:text="组织名称: "
                android:textSize="15sp" />

            <Spinner
                android:id="@+id/SP_ZZ"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:hint="@string/cxstockin_spinner_org" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="right|center_vertical"
                android:singleLine="true"
                android:text="用   户  名: "
                android:textSize="15sp" />

            <EditText
                android:id="@+id/ET_User"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cxstockin_prompt_username"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="right|center_vertical"
                android:singleLine="true"
                android:text="密         码: "
                android:textSize="15sp" />

            <EditText
                android:id="@+id/ET_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cxstockin_prompt_password"
                android:imeActionLabel="@string/cxstockin_action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:text="" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <CheckBox
                android:id="@+id/CB_Remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="记住密码"
                android:textSize="15sp"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/B_Login"
                style="?android:textAppearanceSmall"
                android:layout_width="87dp"
                android:layout_height="wrap_content"
                android:text="@string/cxstockin_action_sign_in"
                android:textStyle="bold" />

            <Button
                android:id="@+id/B_Cancle"
                style="?android:textAppearanceSmall"
                android:layout_width="87dp"
                android:layout_height="wrap_content"
                android:text="@string/cxstockin_action_return"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/RL_Login"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar

            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />
    </RelativeLayout>

</RelativeLayout>
